# PlaiWithHaskell

./: .gitignore  CLAUDE.md  HaskellInterpreter.cabal  README.md  cabal.project
EvenSmallerInterpreter/: EvenSmallerInterpreter.cabal
EvenSmallerInterpreter/app/: Main.hs
EvenSmallerInterpreter/src/: Desugar.hs  Interp.hs  Store.hs  TypeCheck.hs  Types.hs
EvenSmallerInterpreter/test/: Main.hs
SMoL/: SMoL.cabal
SMoL/app/: Main.hs
SMoL/src/: Interp.hs
SMoL/test/: Main.hs
app/: Main.hs
src/: Interp.hs
test/: Main.hs
