cabal-version:      3.0
name:               EvenSmallerInterpreter
version:            0.1.0.0
synopsis:           An even smaller interpreter following the PLAI book
license:            MIT
author:             Lissa
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Interp
    build-depends:    base >= 4.14 && < 5, containers
    hs-source-dirs:   src
    default-language:  Haskell2010

executable even-smaller-plai
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >= 4.14 && < 5
        , EvenSmallerInterpreter
    hs-source-dirs:   app
    default-language:  Haskell2010

test-suite tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base >= 4.14 && < 5,
        containers,
        EvenSmallerInterpreter,
        hspec >= 2.0 && < 3
    hs-source-dirs:   test
    default-language:  Haskell2010
